# graph-metadata-dashboard

./: .dockerignore  Dockerfile  README.md  pyproject.toml
charts/graph-metadata-dashboard/: Chart.yaml  values.yaml
charts/graph-metadata-dashboard/templates/: deployment.yaml  service.yaml
helm/graph-metadata-dashboard/: Chart.yaml  values.yaml
helm/graph-metadata-dashboard/templates/: _helpers.tpl  configmap.yaml  ingress.yaml
src/graph_metadata_dashboard/: __init__.py  __main__.py  app.py  config.py
src/graph_metadata_dashboard/assets/: style.css
src/graph_metadata_dashboard/cache/: __init__.py  base.py  disk.py  factory.py  memory.py
src/graph_metadata_dashboard/components/: __init__.py  single_graph.py
src/graph_metadata_dashboard/diff/: __init__.py
src/graph_metadata_dashboard/loaders/: __init__.py  base.py  kgx_storage.py  uploaded.py
src/graph_metadata_dashboard/pages/: comparison.py  single_graph.py
src/graph_metadata_dashboard/parsers/: __init__.py  graph_metadata.py  models.py
src/graph_metadata_dashboard/viz/: __init__.py  figures.py
tests/: conftest.py  test_app_assets.py
tests/cache/: test_memory_cache.py
tests/fixtures/: alliance.graph-metadata.json  robokopkg.graph-metadata.json  robokopkg.schema.json  translator_kg_open.graph-metadata.json
tests/loaders/: test_kgx_storage.py  test_uploaded.py
tests/pages/: test_single_graph.py
tests/parsers/: test_graph_metadata.py
tests/viz/: test_figures.py
