[project]
name = "graph-metadata-dashboard"
version = "0.1.0"
description = "Dash app for visualizing ORION knowledge graph metadata."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18,<3",
    "diskcache>=5.6,<6",
    "gunicorn>=23,<24",
    "orjson>=3.10,<4",
    "plotly>=5.24,<6",
    "requests>=2.32,<3",
    "robokop-orion==2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.8,<1",
]

[project.scripts]
graph-metadata-dashboard = "graph_metadata_dashboard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_metadata_dashboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
